feat: enhance CategoryPriceSummaryUsecase with optimized queries and improve test coverage